--- a/app/bower.json
+++ b/app/bower.json
@@ -4,6 +4,7 @@
     "dependencies": {
         "lodash": "latest",
         "angular": "1.2.x",
-        "angular-resource":"1.2.x"
+        "angular-resource":"1.2.x",
+        "bootstrap":"~3.1.1"
     }
 }
